--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,14 +1,14 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/2DSideScrollerCPP/Maps/2DSideScrollerExampleMap
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/dsaproject.DSAGameInstance
-GameDefaultMap=/Game/2DSideScrollerCPP/Maps/2DSideScrollerExampleMap
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 ServerDefaultMap=/Game/2DSideScrollerCPP/Maps/2DSideScrollerExampleMap
 GlobalDefaultGameMode=/Script/dsaproject.dsaprojectGameMode
 GlobalDefaultServerGameMode=None
